Add OpenAI API Q&A code

--- a/src/experiments/OpenAI LLM - With RAG.ipynb
+++ b/src/experiments/OpenAI LLM - With RAG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "53d450d4-a778-4e79-aee4-d061c102d6bb",
    "metadata": {},
    "outputs": [],
@@ -18,12 +18,16 @@
     "from langchain.prompts import ChatPromptTemplate\n",
     "from langchain.schema.output_parser import StrOutputParser\n",
     "from nltk.translate.bleu_score import sentence_bleu, SmoothingFunction\n",
-    "from rouge_score import rouge_scorer"
+    "from rouge_score import rouge_scorer\n",
+    "from operator import itemgetter\n",
+    "from langchain.embeddings import OpenAIEmbeddings\n",
+    "from langchain.schema.runnable import RunnablePassthrough\n",
+    "from langchain.vectorstores import FAISS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "4de2cd29-c1f6-4a98-b843-c2fc4961c6a8",
    "metadata": {},
    "outputs": [],
@@ -34,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "09a1864e-1407-419a-a5a6-9643a32c4234",
    "metadata": {},
    "outputs": [],
@@ -58,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "8944e68a-04f8-48f6-b74f-795a5aea06ac",
    "metadata": {},
    "outputs": [],
@@ -68,46 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "3b71d4aa-fbbf-481b-8070-136f6acaf3a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#### API CALL WARNING ####\n",
-    "\n",
-    "answers_openai = {}\n",
-    "for idx, qry in queries.items():\n",
-    "    answers_openai[idx] = llm.invoke(qry)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "b416fc97-502a-458f-9e35-5404ceae78f5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Answers saved to ./backups/answers_openai.pkl\n"
-     ]
-    }
-   ],
-   "source": [
-    "#### DUMP OVERWRITE WARNING ####\n",
-    "\n",
-    "openai_answers_file_path = './backups/answers_openai.pkl'\n",
-    "\n",
-    "with open(openai_answers_file_path, 'wb') as file:\n",
-    "    pickle.dump(answers_openai, file)\n",
-    "\n",
-    "print(f\"Answers saved to {openai_answers_file_path}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "53d7d888-6520-4f05-a471-693db3de55ea",
    "metadata": {},
    "outputs": [
@@ -130,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "6126b150-171e-47fb-834f-2e2bcb8720bf",
    "metadata": {},
    "outputs": [
@@ -140,7 +105,7 @@
        "'.W\\nThis report is an analysis of 6300 acts of use\\nin 104 technical libraries in the United Kingdom.\\nLibrary use is only one aspect of the wider pattern of\\ninformation use.  Information transfer in libraries is\\nrestricted to the use of documents.  It takes no\\naccount of documents used outside the library, still\\nless of information transferred orally from person\\nto person.  The library acts as a channel in only a\\nproportion of the situations in which information is\\ntransferred.\\nTaking technical information transfer as a whole,\\nthere is no doubt that this proportion is not the\\nmajor one.  There are users of technical information -\\nparticularly in technology rather than science -\\nwho visit libraries rarely if at all, relying on desk\\ncollections of handbooks, current periodicals and personal\\ncontact with their colleagues and with people in other\\norganizations.  Even regular library users also receive\\ninformation in other ways.\\n'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "30166860-696f-4f6d-8a80-80607694bbc0",
    "metadata": {},
    "outputs": [],
@@ -171,79 +136,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7ed728ff-891a-4d21-91db-f213734a5d6c",
+   "execution_count": 9,
+   "id": "709a2a83-d736-4448-9584-905b2db58900",
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai_answers_file_path = './backups/answers_openai.pkl'\n",
-    "with open(openai_answers_file_path, 'rb') as file:\n",
-    "    answers_openai = pickle.load(file)"
+    "#### DUMP OVERWRITE WARNING ####\n",
+    "\n",
+    "# Build the document vector store\n",
+    "\n",
+    "K = 10 # Hyperparameter governing how many top ranking documents are used for RAG IR\n",
+    "doc_texts = [docs[int(doc_id) - 1]['body'] for query_id in rel_set.keys() for doc_id in rel_set[query_id][:K]]\n",
+    "\n",
+    "openai_answers_file_path = './backups/rag_contexts/cisi/doc_texts.pkl'\n",
+    "\n",
+    "with open(openai_answers_file_path, 'wb') as file:\n",
+    "    pickle.dump(doc_texts, file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "6e3d677c-1ac9-49d4-914c-22deb69b3720",
+   "execution_count": 36,
+   "id": "add8bf19-620e-47d9-9e41-45716c19fee9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean BLEU Score: 0.1895\n",
-      "Mean ROUGE Score: 0.0984\n"
+      "Document texts loaded successfully.\n"
      ]
     }
    ],
    "source": [
-    "from nltk.translate.bleu_score import sentence_bleu, SmoothingFunction\n",
-    "from rouge_score import rouge_scorer\n",
+    "docs_file_path = './backups/rag_contexts/cisi/doc_texts.pkl'\n",
     "\n",
-    "# Implement BLEU evaluation function\n",
-    "def compute_bleu(reference, candidate):\n",
-    "    smoothing = SmoothingFunction().method4\n",
-    "    return sentence_bleu([reference], candidate, smoothing_function=smoothing)\n",
+    "with open(docs_file_path, 'rb') as file:\n",
+    "    doc_texts = pickle.load(file)\n",
     "\n",
-    "# Implement ROUGE evaluation function\n",
-    "def compute_rouge(reference, candidate):\n",
-    "    scorer = rouge_scorer.RougeScorer(['rougeL'], use_stemmer=True)\n",
-    "    scores = scorer.score(reference, candidate)\n",
-    "    return scores['rougeL'].fmeasure\n",
+    "print(\"Document texts loaded successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "488a20a0-ee6c-4234-8ca1-a8f72d7d8864",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build the document vector store\n",
+    "# doc_texts = [docs[int(doc_id) - 1]['body'] for query_id in rel_set.keys() for doc_id in rel_set[query_id]]\n",
+    "vectorstore = FAISS.from_texts(doc_texts, embedding=OpenAIEmbeddings())\n",
+    "retriever = vectorstore.as_retriever()\n",
     "\n",
-    "# Evaluate BLEU and ROUGE for each query\n",
+    "# Define the RAG pipeline\n",
+    "template = \"\"\"Answer the question based only on the following context:\n",
+    "              {context}\n",
+    "              Question: {question}\n",
+    "            \"\"\"\n",
+    "prompt = ChatPromptTemplate.from_template(template)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2fb79e70-9345-4fe9-bb82-a96dffa3ef50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This code converts the question and context into a prompt, passes it to the llm, and parses the llm output \n",
+    "chain = ( {\"context\": retriever, \"question\": RunnablePassthrough()} | prompt  | llm | StrOutputParser() )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ba9db072-d4e4-4e3a-bff5-735e79954315",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RAG responses saved to ./backups/openai_with_rag_responses.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### API CALL WARNING #####\n",
     "\n",
-    "K = 1  # Number of most relevant docs to consider for scoring performance\n",
-    "total_bleu_score = 0.0\n",
-    "total_rouge_score = 0.0\n",
-    "num_queries = 0\n",
+    "rag_responses = {}\n",
     "\n",
-    "for query_id, relevant_docs in rel_set.items():\n",
+    "# Run RAG pipeline for every question\n",
+    "for query_id in tqdm(rel_set.keys(), desc = 'Asking Queries to ChatGPT with RAG'):\n",
     "    query_text = queries[int(query_id)]\n",
-    "    response = answers_openai[int(query_id)]\n",
+    "    response = chain.invoke(query_text)\n",
+    "    rag_responses[query_id] = response\n",
     "\n",
-    "    # Evaluate using BLEU\n",
-    "    bleu_score = compute_bleu(' '.join([docs[int(id) - 1]['body'] for id in relevant_docs[:K]]), response)\n",
-    "    total_bleu_score += bleu_score\n",
+    "# Save RAG responses to a pickle file\n",
+    "rag_responses_file_path = './backups/openai_with_rag_responses.pkl'\n",
+    "with open(rag_responses_file_path, 'wb') as file:\n",
+    "    pickle.dump(rag_responses, file)\n",
     "\n",
-    "    # Evaluate using ROUGE\n",
-    "    rouge_score = compute_rouge(' '.join([docs[int(id) - 1]['body'] for id in relevant_docs[:K]]), response)\n",
-    "    total_rouge_score += rouge_score\n",
-    "\n",
-    "    num_queries += 1\n",
-    "\n",
-    "# Calculate mean scores\n",
-    "mean_bleu_score = total_bleu_score / num_queries\n",
-    "mean_rouge_score = total_rouge_score / num_queries\n",
-    "\n",
-    "print(f\"Mean BLEU Score: {mean_bleu_score:.4f}\")\n",
-    "print(f\"Mean ROUGE Score: {mean_rouge_score:.4f}\")"
+    "print(f\"RAG responses saved to {rag_responses_file_path}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1c385a9-f3ed-41f8-b795-9884885c19a2",
+   "id": "69543307-aca1-4247-94a8-1cd6dd983553",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "openai_with_rag_responses_file_path = './backups/openai_with_rag_responses.pkl'\n",
+    "with open(openai_with_rag_responses_file_path, 'rb') as file:\n",
+    "    rag_responses = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "694673f9-44bb-47ff-9fc6-1045afff7035",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nAnswer: Information dissemination by journals and periodicals is an important part of scientific libraries, as it provides access to a wealth of experimental data. In order to make the most efficient use of funds, libraries must adopt a highly selective purchasing plan to ensure that the needs of readers are met. However, the development of a national information system is beginning to encroach on the domain of the primary publication system, which may endanger orderly communication through research journals. Additionally, increased distribution of unedited, unreferred and unproofed preprints could further disrupt journals or transform them into depositories.'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " # Sanity\n",
+    "rag_responses['30']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86e89275-062c-49f8-ab9b-ad6bd50f4c89",
    "metadata": {},
    "outputs": [],
    "source": []
