--- a/src/experiments/Local Llama LLM - With RAG (Sample).ipynb
+++ b/src/experiments/Local Llama LLM - With RAG (Sample).ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "0f228c0e-4ed2-4645-bdd6-1e623b55739c",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "f7bdc2fe-7704-4838-b36d-bf05f4e22917",
    "metadata": {
     "scrolled": true
@@ -327,7 +327,8 @@
       "llama_model_loader: - tensor  274:             blk.30.attn_k.weight q4_K     [  4096,  4096,     1,     1 ]\n",
       "llama_model_loader: - tensor  275:             blk.30.attn_v.weight q4_K     [  4096,  4096,     1,     1 ]\n",
       "llama_model_loader: - tensor  276:        blk.30.attn_output.weight q4_K     [  4096,  4096,     1,     1 ]\n",
-      "llama_model_loader: - tensor  277:          blk.30.attn_norm.weight f32      [  4096,     1,     1,     1 ]\n",
+      "llama_model_loader: - tensor  277:          blk.30.attn_norm.weight f32      [  4096AVX = 0 | AVX2 = 0 | AVX512 = 0 | AVX512_VBMI = 0 | AVX512_VNNI = 0 | FMA = 0 | NEON = 1 | ARM_FMA = 1 | F16C = 0 | FP16_VA = 1 | WASM_SIMD = 0 | BLAS = 1 | SSE3 = 0 | SSSE3 = 0 | VSX = 0 | \n",
+      ",     1,     1,     1 ]\n",
       "llama_model_loader: - tensor  278:           blk.30.ffn_gate.weight q4_K     [  4096, 11008,     1,     1 ]\n",
       "llama_model_loader: - tensor  279:           blk.30.ffn_down.weight q4_K     [ 11008,  4096,     1,     1 ]\n",
       "llama_model_loader: - tensor  280:             blk.30.ffn_up.weight q4_K     [  4096, 11008,     1,     1 ]\n",
@@ -396,42 +397,32 @@
       "llama_new_context_with_model: freq_base  = 10000.0\n",
       "llama_new_context_with_model: freq_scale = 1\n",
       "llama_new_context_with_model: kv self size  = 1024.00 MB\n",
-      "llama_new_context_with_model: compute buffer total size = 8.31 MB\n",
-      "AVX = 0 | AVX2 = 0 | AVX512 = 0 | AVX512_VBMI = 0 | AVX512_VNNI = 0 | FMA = 0 | NEON = 1 | ARM_FMA = 1 | F16C = 0 | FP16_VA = 1 | WASM_SIMD = 0 | BLAS = 1 | SSE3 = 0 | SSSE3 = 0 | VSX = 0 | \n"
+      "llama_new_context_with_model: compute buffer total size = 8.31 MB\n"
      ]
     }
    ],
    "source": [
     "llm = LlamaCpp(\n",
     "    model_path=\"./backups/llama.cpp/models/llama-2-7b-chat.ggmlv3.q4_K_S.gguf.bin\", \n",
-    "    n_ctx=2048)"
+    "    n_ctx=2048)\n",
+    "llm.client.verbose = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "97067454-1f72-457a-891a-228281e77f62",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "llama_print_timings:        load time =   580.72 ms\n",
-      "llama_print_timings:      sample time =   181.38 ms /   256 runs   (    0.71 ms per token,  1411.39 tokens per second)\n",
-      "llama_print_timings: prompt eval time =   580.63 ms /     8 tokens (   72.58 ms per token,    13.78 tokens per second)\n",
-      "llama_print_timings:        eval time = 13711.30 ms /   256 runs   (   53.56 ms per token,    18.67 tokens per second)\n",
-      "llama_print_timings:       total time = 14846.07 ms\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "'\\nLlama.cpp is a C++ library for creating and manipulating 3D models, including geometry, materials, and animations. It is designed to be fast, flexible, and easy to use, making it a great choice for developers who want to add 3D capabilities to their applications without having to write all the code from scratch.\\n\\nHere are some of the key features of Llama.cpp:\\n\\n1. Geometry: Llama.cpp provides a wide range of geometric primitives, including points, lines, triangles, and more. These primitives can be combined to create complex 3D models.\\n2. Materials: Llama.cpp includes support for materials, which define the appearance of a 3D object, including its color, texture, and other properties. Materials can be applied to individual objects or groups of objects.\\n3. Animations: Llama.cpp allows developers to create animations by defining keyframe data, which defines the position and rotation of an object over time. Animations can be played back using a variety of rendering algorithms.\\n4. Physics: Llama.cpp includes a simple physics engine that can be used to simulate physics in '"
+       "'\\nLlama.cpp is a C++ library for working with the Elasticsearch API. It provides a convenient and easy-to-use interface for searching, updating, and managing data in Elasticsearch. The library is designed to be flexible and customizable, allowing developers to easily integrate it into their projects and workflows.\\n\\nFeatures of Llama.cpp:\\n\\n1. Searching: Llama.cpp provides a simple and intuitive API for searching Elasticsearch indexes. Developers can use the library to perform full-text searches, phrase searches, and faceted searches using various search types (e.g., term, phrase, boolean, etc.).\\n2. Updating: The library allows developers to update documents in Elasticsearch using a variety of methods, including patches, updates, and bulk updates.\\n3. Managing: Llama.cpp provides tools for managing Elasticsearch indexes, including creating, deleting, and altering index configurations.\\n4. Customization: Developers can customize the library to suit their needs by providing their own implementations of certain methods or by extending the library with new features.\\n5. Error handling: The library includes robust error handling mechanisms to help developers handle'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7d4705c1-350e-4242-8e17-18eef906ef9f",
    "metadata": {
     "scrolled": true
@@ -811,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b41a2e33-eb80-4cb8-8d65-b10c83c071ff",
    "metadata": {
     "scrolled": true
@@ -826,22 +817,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ad881007-27ed-40ff-a282-c8105c4c6ef8",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "\n",
-      "llama_print_timings:        load time =   521.55 ms\n",
+      "llama_print_timings:        load time =   518.81 ms\n",
       "llama_print_timings:      sample time =     0.00 ms /     1 runs   (    0.00 ms per token,      inf tokens per second)\n",
-      "llama_print_timings: prompt eval time =  2498.63 ms /    48 tokens (   52.05 ms per token,    19.21 tokens per second)\n",
+      "llama_print_timings: prompt eval time =  2451.08 ms /    48 tokens (   51.06 ms per token,    19.58 tokens per second)\n",
       "llama_print_timings:        eval time =     0.00 ms /     1 runs   (    0.00 ms per token,      inf tokens per second)\n",
-      "llama_print_timings:       total time =  2504.90 ms\n"
+      "llama_print_timings:       total time =  2458.20 ms\n"
      ]
     }
    ],
@@ -852,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "37ba3080-5f49-4d6f-a4f8-46327eec7012",
    "metadata": {
     "scrolled": true
@@ -879,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ba15e546-847b-4de3-b615-6e173bf14e8a",
    "metadata": {},
    "outputs": [],
@@ -892,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "6bce081a-d0d8-4f04-96c8-e2868d8ff81f",
    "metadata": {},
    "outputs": [
@@ -901,27 +890,27 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "llama_print_timings:        load time =   521.55 ms\n",
+      "llama_print_timings:        load time =   518.81 ms\n",
       "llama_print_timings:      sample time =     0.00 ms /     1 runs   (    0.00 ms per token,      inf tokens per second)\n",
-      "llama_print_timings: prompt eval time =   497.25 ms /    10 tokens (   49.72 ms per token,    20.11 tokens per second)\n",
+      "llama_print_timings: prompt eval time =   483.68 ms /    10 tokens (   48.37 ms per token,    20.67 tokens per second)\n",
       "llama_print_timings:        eval time =     0.00 ms /     1 runs   (    0.00 ms per token,      inf tokens per second)\n",
-      "llama_print_timings:       total time =   499.93 ms\n",
+      "llama_print_timings:       total time =   485.87 ms\n",
       "Llama.generate: prefix-match hit\n",
       "\n",
-      "llama_print_timings:        load time =   580.72 ms\n",
-      "llama_print_timings:      sample time =   180.71 ms /   256 runs   (    0.71 ms per token,  1416.63 tokens per second)\n",
-      "llama_print_timings: prompt eval time =  7939.88 ms /   160 tokens (   49.62 ms per token,    20.15 tokens per second)\n",
-      "llama_print_timings:        eval time = 13943.01 ms /   256 runs   (   54.46 ms per token,    18.36 tokens per second)\n",
-      "llama_print_timings:       total time = 22453.02 ms\n"
+      "llama_print_timings:        load time =   575.86 ms\n",
+      "llama_print_timings:      sample time =   180.72 ms /   256 runs   (    0.71 ms per token,  1416.60 tokens per second)\n",
+      "llama_print_timings: prompt eval time =  7703.09 ms /   160 tokens (   48.14 ms per token,    20.77 tokens per second)\n",
+      "llama_print_timings:        eval time = 13866.42 ms /   256 runs   (   54.17 ms per token,    18.46 tokens per second)\n",
+      "llama_print_timings:       total time = 22141.12 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "\"\\nAnswer: \\n\\n1. General: The patient was previously healthy and had no underlying medical conditions.\\n2. Skin: There were no skin lesions or rashes observed at the time of presentation.\\n3. HEENT: The patient had a mild sinus tachycardia, but there were no other abnormalities observed in the head, eyes, ears, nose, or throat.\\n4. Pulmonary: Chest examination revealed wheezing, and the patient had a minimal decrease in lung fields on both sides.\\n5. Cardiovascular: The patient had a rapid heart rate (120 bpm) with no other cardiac abnormalities.\\n6. Gastrointestinal: There were no abnormalities observed in the patient's abdomen or gastrointestinal system.\\n7. Genitourinary: The patient had no abnormalities in the genital or urinary systems.\\n8. Musculoskeletal: There were no musculoskeletal abnormalities observed during the examination.\\n9. Neurologic: The patient had a mild confusion and disorientation, but there were\""
+       "\"\\nAnswer:\\n\\n1. General: The patient's tachycardia, fever, and mental confusion are indicative of a systemic inflammatory response, suggesting a severe infection or sepsis.\\n2. Skin: There is no specific skin finding mentioned in the history of present illness.\\n3. HEENT: The patient's symptoms did not originate from the head, eyes, ears, nose, or throat (HEENT) region.\\n4. Pulmonary: No pulmonary findings are reported in the history of present illness.\\n5. Cardiovascular: There is no mention of cardiovascular symptoms or findings in the patient's history.\\n6. Gastrointestinal: The patient's symptoms did not originate from the gastrointestinal tract.\\n7. Genitourinary: No genitourinary findings are reported in the history of present illness.\\n8. Musculoskeletal: There is no mention of musculoskeletal symptoms or findings in the patient's history.\\n9. Neurologic: The patient's mental\""
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
