--- a/src/experiments/Local Llama LLM - No RAG.ipynb
+++ b/src/experiments/Local Llama LLM - No RAG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "53d450d4-a778-4e79-aee4-d061c102d6bb",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4de2cd29-c1f6-4a98-b843-c2fc4961c6a8",
    "metadata": {
     "scrolled": true
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "46c95755-eab2-4e0b-93ef-b319bf6cff96",
    "metadata": {},
    "outputs": [],
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "bf9a1a2d-363f-41da-9474-524e4bb06e8b",
    "metadata": {},
    "outputs": [],
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8944e68a-04f8-48f6-b74f-795a5aea06ac",
    "metadata": {},
    "outputs": [],
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "53d7d888-6520-4f05-a471-693db3de55ea",
    "metadata": {},
    "outputs": [
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "6126b150-171e-47fb-834f-2e2bcb8720bf",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1301,7 @@
        "'.W\\nThis report is an analysis of 6300 acts of use\\nin 104 technical libraries in the United Kingdom.\\nLibrary use is only one aspect of the wider pattern of\\ninformation use.  Information transfer in libraries is\\nrestricted to the use of documents.  It takes no\\naccount of documents used outside the library, still\\nless of information transferred orally from person\\nto person.  The library acts as a channel in only a\\nproportion of the situations in which information is\\ntransferred.\\nTaking technical information transfer as a whole,\\nthere is no doubt that this proportion is not the\\nmajor one.  There are users of technical information -\\nparticularly in technology rather than science -\\nwho visit libraries rarely if at all, relying on desk\\ncollections of handbooks, current periodicals and personal\\ncontact with their colleagues and with people in other\\norganizations.  Even regular library users also receive\\ninformation in other ways.\\n'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "30166860-696f-4f6d-8a80-80607694bbc0",
    "metadata": {},
    "outputs": [],
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "7ed728ff-891a-4d21-91db-f213734a5d6c",
    "metadata": {},
    "outputs": [],
@@ -1344,67 +1344,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "c1417ce2-8d99-4bdf-ab5a-46090c45a299",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Implement BLEU evaluation function\n",
-    "def compute_bleu(reference, candidate):\n",
-    "    smoothing = SmoothingFunction().method4\n",
-    "    return sentence_bleu([reference], candidate, smoothing_function=smoothing)"
+    "def compute_bleu(references, candidate):\n",
+    "    smoothing = SmoothingFunction().method0\n",
+    "    return sentence_bleu(references, candidate, smoothing_function=smoothing)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "4dfd579f-d67b-458b-9489-806017da7ed4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Implement ROUGE evaluation function\n",
-    "def compute_rouge(reference, candidate):\n",
-    "    scorer = rouge_scorer.RougeScorer(['rougeL'], use_stemmer=True)\n",
-    "    scores = scorer.score(reference, candidate)\n",
-    "    return scores['rougeL'].fmeasure"
+    "def compute_rouge(references, candidate):\n",
+    "    scorer = rouge_scorer.RougeScorer(['rouge1'], use_stemmer=True)\n",
+    "    total_score = 0\n",
+    "\n",
+    "    # Compute ROUGE for each reference\n",
+    "    for reference in references:\n",
+    "        scores = scorer.score(reference, candidate)\n",
+    "        total_score += scores['rouge1'].fmeasure\n",
+    "\n",
+    "    # Calculate average score\n",
+    "    average_score = total_score / len(references)\n",
+    "    return average_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "c9040c02-829a-4120-a97e-ff0bc194abf9",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Computing scores::   8%|███                                   | 6/76 [00:00<00:03, 18.32it/s]/Users/sanidhyasingal/Library/CloudStorage/GoogleDrive-ssingal@ucsd.edu/My Drive/UCSD/Notes/4th Quarter - Fall 2023/MED 277 - Intro to BioNLP/venv/lib/python3.9/site-packages/nltk/translate/bleu_score.py:552: UserWarning: \n",
+      "The hypothesis contains 0 counts of 2-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n",
+      "/Users/sanidhyasingal/Library/CloudStorage/GoogleDrive-ssingal@ucsd.edu/My Drive/UCSD/Notes/4th Quarter - Fall 2023/MED 277 - Intro to BioNLP/venv/lib/python3.9/site-packages/nltk/translate/bleu_score.py:552: UserWarning: \n",
+      "The hypothesis contains 0 counts of 3-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n",
+      "/Users/sanidhyasingal/Library/CloudStorage/GoogleDrive-ssingal@ucsd.edu/My Drive/UCSD/Notes/4th Quarter - Fall 2023/MED 277 - Intro to BioNLP/venv/lib/python3.9/site-packages/nltk/translate/bleu_score.py:552: UserWarning: \n",
+      "The hypothesis contains 0 counts of 4-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n",
+      "Computing scores:: 100%|█████████████████████████████████████| 76/76 [00:04<00:00, 16.81it/s]"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean BLEU Score: 0.2710\n",
-      "Mean ROUGE Score: 0.1242\n"
+      "Mean BLEU Score: 0.7199\n",
+      "Mean ROUGE Score: 0.2061\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
     "# Evaluate BLEU and ROUGE for each query\n",
-    "K = 1  # Number of most relevant docs to consider for scoring performance\n",
+    "\n",
+    "K = 30 # Number of most relevant docs to consider for scoring performance\n",
     "total_bleu_score = 0.0\n",
     "total_rouge_score = 0.0\n",
     "num_queries = 0\n",
     "\n",
-    "for query_id, relevant_docs in rel_set.items():\n",
+    "for query_id, relevant_docs in tqdm(rel_set.items(), desc = 'Computing scores:'):\n",
     "    query_text = queries[int(query_id)]\n",
     "    response = answers_llama[int(query_id)]\n",
-    "\n",
+    "    # print(query_id, query_text, \"\\n\\nResponse:\\n\", response, \"\\n=========\\nTopmost relevant Doc:\\n\", docs[int(relevant_docs[0])-1]['body'], \"\\n======\\n\")\n",
+    "    # print()\n",
+    "    \n",
     "    # Evaluate using BLEU\n",
-    "    bleu_score = compute_bleu(' '.join([docs[int(id) - 1]['body'] for id in relevant_docs[:K]]), response)\n",
+    "    bleu_score = compute_bleu([docs[int(id)]['body'] for id in relevant_docs[:K]], response)\n",
     "    total_bleu_score += bleu_score\n",
     "\n",
     "    # Evaluate using ROUGE\n",
-    "    rouge_score = compute_rouge(' '.join([docs[int(id) - 1]['body'] for id in relevant_docs[:K]]), response)\n",
+    "    rouge_score = compute_rouge([docs[int(id)]['body'] for id in relevant_docs[:K]], response)\n",
     "    total_rouge_score += rouge_score\n",
     "\n",
     "    num_queries += 1\n",
-    "\n",
+    "    \n",
     "# Calculate mean scores\n",
     "mean_bleu_score = total_bleu_score / num_queries\n",
     "mean_rouge_score = total_rouge_score / num_queries\n",
