--- a/src/experiments/Local Llama LLM - With RAG.ipynb
+++ b/src/experiments/Local Llama LLM - With RAG.ipynb
@@ -562,7 +562,7 @@
     {
      "data": {
       "text/plain": [
-       "'What does Small mean by \"consensual structure of concepts\" in this context?\\nA) A framework for organizing and interpreting citations\\nB) A set of concepts that are used together frequently in a particular field\\nC) A standardized method for documenting references in academic papers\\nD) A measure of the degree of agreement among authors on a particular topic\\nThe answer is (B) A set of concepts that are used together frequently in a particular field.'"
+       "'\\nBased on the context provided above, what is the main argument made in this paper? '"
       ]
      },
      "execution_count": 12,
@@ -625,42 +625,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "69543307-aca1-4247-94a8-1cd6dd983553",
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai_with_rag_responses_file_path = './backups/llama_with_rag_responses.pkl'\n",
-    "with open(openai_with_rag_responses_file_path, 'rb') as file:\n",
+    "llama_with_rag_responses_file_path = './backups/llama_with_rag_responses.pkl'\n",
+    "with open(llama_with_rag_responses_file_path, 'rb') as file:\n",
     "    rag_responses = pickle.load(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "694673f9-44bb-47ff-9fc6-1045afff7035",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n1. Who is responsible for providing information to the public through journals?\\nA) Editors of Journals\\nB) Authors of articles\\nC) Publishers\\nD) Governments\\n\\nPlease choose the correct answer based on the context provided.'"
+       "'Paradigm: \\nA consensual structure of concepts in a field.  '"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     " # Sanity\n",
-    "rag_responses['30']"
+    "rag_responses['90']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3ae0d8b0-71ac-427f-b903-03d6f1d51961",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Implement BLEU evaluation function\n",
+    "def compute_bleu(references, candidate):\n",
+    "    smoothing = SmoothingFunction().method0\n",
+    "    return sentence_bleu(references, candidate, smoothing_function=smoothing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2a200ab8-4d4a-4b17-81d6-de35b5547e48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Implement ROUGE evaluation function\n",
+    "def compute_rouge(references, candidate):\n",
+    "    scorer = rouge_scorer.RougeScorer(['rouge1'], use_stemmer=True)\n",
+    "    total_score = 0\n",
+    "\n",
+    "    # Compute ROUGE for each reference\n",
+    "    for reference in references:\n",
+    "        scores = scorer.score(reference, candidate)\n",
+    "        total_score += scores['rouge1'].fmeasure\n",
+    "\n",
+    "    # Calculate average score\n",
+    "    average_score = total_score / len(references)\n",
+    "    return average_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8f8f5102-bf05-4d8c-89c8-96498768e985",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean BLEU Score: 0.7047\n",
+      "Mean ROUGE Score: 0.1826\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate BLEU and ROUGE for each query\n",
+    "\n",
+    "K = 30 # Number of most relevant docs to consider for scoring performance\n",
+    "total_bleu_score = 0.0\n",
+    "total_rouge_score = 0.0\n",
+    "num_queries = 0\n",
+    "\n",
+    "for query_id, relevant_docs in rel_set.items():\n",
+    "    query_text = queries[int(query_id)]\n",
+    "    response = rag_responses[query_id]\n",
+    "\n",
+    "    # print(query_id, query_text, \"\\n\\nResponse:\\n\", response, \"\\nTopmost relevant Doc:\\n\", docs[int(relevant_docs[0])], \"\\n======\\n\")\n",
+    "    \n",
+    "    # Evaluate using BLEU\n",
+    "    bleu_score = compute_bleu([docs[int(id)]['body'] for id in relevant_docs[:K]], response)\n",
+    "    total_bleu_score += bleu_score\n",
+    "\n",
+    "    # Evaluate using ROUGE\n",
+    "    rouge_score = compute_rouge([docs[int(id)]['body'] for id in relevant_docs[:K]], response)\n",
+    "    total_rouge_score += rouge_score\n",
+    "\n",
+    "    num_queries += 1\n",
+    "    # if num_queries == 10:\n",
+    "    #     break\n",
+    "\n",
+    "# Calculate mean scores\n",
+    "mean_bleu_score = total_bleu_score / num_queries\n",
+    "mean_rouge_score = total_rouge_score / num_queries\n",
+    "\n",
+    "print(f\"Mean BLEU Score: {mean_bleu_score:.4f}\")\n",
+    "print(f\"Mean ROUGE Score: {mean_rouge_score:.4f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86e89275-062c-49f8-ab9b-ad6bd50f4c89",
+   "id": "206a7513-3cb1-4466-81c0-6ef30297758a",
    "metadata": {},
    "outputs": [],
    "source": []
