--- a/src/experiments/Local Llama LLM - No RAG.ipynb
+++ b/src/experiments/Local Llama LLM - No RAG.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4de2cd29-c1f6-4a98-b843-c2fc4961c6a8",
    "metadata": {
     "scrolled": true
@@ -380,15 +380,15 @@
       "llama_new_context_with_model: freq_base  = 10000.0\n",
       "llama_new_context_with_model: freq_scale = 1\n",
       "llama_new_context_with_model: kv self size  = 1024.00 MB\n",
-      "llama_new_context_with_model: compute buffer total size = 8.31 MB\n",
-      "AVX = 0 | AVX2 = 0 | AVX512 = 0 | AVX512_VBMI = 0 | AVX512_VNNI = 0 | FMA = 0 | NEON = 1 | ARM_FMA = 1 | F16C = 0 | FP16_VA = 1 | WASM_SIMD = 0 | BLAS = 1 | SSE3 = 0 | SSSE3 = 0 | VSX = 0 | \n"
+      "llama_new_context_with_model: compute buffer total size = 8.31 MB\n"
      ]
     }
    ],
    "source": [
     "llm = LlamaCpp(\n",
     "    model_path=\"./backups/llama.cpp/models/llama-2-7b-chat.ggmlv3.q4_K_S.gguf.bin\", \n",
-    "    n_ctx=2048)\n",
+    "    n_ctx=2048, \n",
+    "    verbose=False)\n",
     "llm.client.verbose = False"
    ]
   },
