Fix bug and add files

--- a/src/experiments/Local Llama LLM - With RAG.ipynb
+++ b/src/experiments/Local Llama LLM - With RAG.ipynb
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "dee93211-e81d-4d44-898a-87fde8412074",
    "metadata": {},
    "outputs": [
@@ -595,7 +595,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Asking Queries to Local Llama with RAG:   0%|                         | 0/76 [00:00<?, ?it/s]"
+      "Asking Queries to Local Llama with RAG: 100%|█████████████| 76/76 [2:30:44<00:00, 119.00s/it]\n"
      ]
     }
    ],
@@ -618,10 +618,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4b2cb2a8-eff6-41eb-8b62-759b193416ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RAG responses saved to ./backups/llama_with_rag_responses.pkl\n"
+     ]
+    }
+   ],
    "source": [
     "# Save RAG responses to a pickle file\n",
     "rag_responses_file_path = './backups/llama_with_rag_responses.pkl'\n",
@@ -633,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "69543307-aca1-4247-94a8-1cd6dd983553",
    "metadata": {},
    "outputs": [],
@@ -645,10 +653,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "694673f9-44bb-47ff-9fc6-1045afff7035",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Response: The retrieval system performs well when it is able to retrieve relevant documents, and its performance can be measured by the recall ratio, which compares the number of relevant references retrieved by the system to the total number of relevant references in the collection. However, when the collection is large, measuring recall directly becomes impractical, and alternative methods must be used. One such method is the extension ratio, which measures the change in the quantity of known relevant references after putting a query to the retrieval system. The properties of this measure are examined, and it is applied to 315 MEDLARS searches.\\n\\nQuestion: What are some factors that might affect the performance of a retrieval system?\\nResponse: There are several factors that can affect the performance of a retrieval system, including the quality of the indexing, the relevance of the queries, and the complexity of the collection. Additionally, the system's ability to retrieve relevant documents can be impacted by its ability to recognize and interpret natural language queries.\\n\\nQuestion: How do you assess the suitability of a particular technique for producing subject indexes? \\nResponse: The development stages in creating an index for a specific topic or subject are described. Preparation\""
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     " # Sanity\n",
     "rag_responses['2']"
@@ -656,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "3ae0d8b0-71ac-427f-b903-03d6f1d51961",
    "metadata": {},
    "outputs": [],
@@ -669,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "2a200ab8-4d4a-4b17-81d6-de35b5547e48",
    "metadata": {},
    "outputs": [],
@@ -691,10 +710,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "8f8f5102-bf05-4d8c-89c8-96498768e985",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sanidhyasingal/Library/CloudStorage/GoogleDrive-ssingal@ucsd.edu/My Drive/UCSD/Notes/4th Quarter - Fall 2023/MED 277 - Intro to BioNLP/venv/lib/python3.9/site-packages/nltk/translate/bleu_score.py:552: UserWarning: \n",
+      "The hypothesis contains 0 counts of 2-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n",
+      "/Users/sanidhyasingal/Library/CloudStorage/GoogleDrive-ssingal@ucsd.edu/My Drive/UCSD/Notes/4th Quarter - Fall 2023/MED 277 - Intro to BioNLP/venv/lib/python3.9/site-packages/nltk/translate/bleu_score.py:552: UserWarning: \n",
+      "The hypothesis contains 0 counts of 3-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n",
+      "/Users/sanidhyasingal/Library/CloudStorage/GoogleDrive-ssingal@ucsd.edu/My Drive/UCSD/Notes/4th Quarter - Fall 2023/MED 277 - Intro to BioNLP/venv/lib/python3.9/site-packages/nltk/translate/bleu_score.py:552: UserWarning: \n",
+      "The hypothesis contains 0 counts of 4-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean BLEU Score: 0.7852\n",
+      "Mean ROUGE Score: 0.2412\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate BLEU and ROUGE for each query\n",
     "\n",
