Stored reduced document and query vectors

--- a/src/experiments/IR_with_LSI.ipynb
+++ b/src/experiments/IR_with_LSI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "1c1006d6",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "0e73b0aa",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "1296f1b6",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "57ae9260",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "012aace9",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "6426aa96",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "e7d0fd87",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "ff851064",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "e5e6f6ad",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "4ee08ca3",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "91acea8d",
    "metadata": {},
    "outputs": [],
@@ -219,6 +219,41 @@
     "svd = TruncatedSVD(n_components=num_topics)\n",
     "documents_reduced = svd.fit_transform(documents_vectors)\n",
     "queries_reduced = svd.fit_transform(queries_vectors)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9d40f92c-1fde-49de-912e-8774937c4a8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"./backups/lsi/documents.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(documents_reduced, f)\n",
+    "\n",
+    "with open(\"./backups/lsi/queries.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(queries_reduced, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "47d25a6d-9653-49b6-a93e-be87675b5993",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1460, 100), (112, 100))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "documents_reduced.shape, queries_reduced.shape"
    ]
   },
   {
@@ -373,9 +408,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ir_env_new",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "ir_env_new"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -387,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
